[package]
name         = "cloud"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
description  = "Criome cloud provider API daemon and thin CLI."
publish      = false

[lib]
name = "cloud"
path = "src/lib.rs"

[[bin]]
name = "cloud-daemon"
path = "src/bin/cloud-daemon.rs"

[[bin]]
name = "cloud"
path = "src/bin/cloud.rs"

[features]
default = ["cloudflare"]
cloudflare = ["dep:serde", "dep:serde_json", "dep:ureq"]
google-cloud = []
hetzner = []

[dependencies]
nota-codec        = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
nota-config       = { git = "https://github.com/LiGoldragon/nota-config.git", branch = "main" }
owner-signal-cloud = { git = "https://github.com/LiGoldragon/owner-signal-cloud.git", branch = "main" }
rkyv              = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-cloud      = { git = "https://github.com/LiGoldragon/signal-cloud.git", branch = "main" }
signal-frame      = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
serde             = { version = "1", features = ["derive"], optional = true }
serde_json        = { version = "1", optional = true }
thiserror         = "2"
ureq              = { version = "2", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
