[package]
name         = "cloud"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
description  = "Criome cloud provider API daemon and thin CLI."
publish      = false

[lib]
name = "cloud"
path = "src/lib.rs"

[[bin]]
name = "cloud-daemon"
path = "src/bin/cloud-daemon.rs"

[[bin]]
name = "cloud"
path = "src/bin/cloud.rs"

[[bin]]
name = "meta-cloud"
path = "src/bin/meta-cloud.rs"

[features]
default = ["cloudflare"]
cloudflare = ["dep:serde", "dep:serde_json", "dep:ureq"]
google-cloud = []
hetzner = ["dep:serde", "dep:serde_json", "dep:ureq"]
nota-text = ["signal-cloud/nota-text", "meta-signal-cloud/nota-text"]

[dependencies]
nota-next         = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
meta-signal-cloud = { git = "https://github.com/LiGoldragon/meta-signal-cloud.git", branch = "hetzner-compute", features = ["nota-text"] }
rkyv              = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-cloud        = { git = "https://github.com/LiGoldragon/signal-cloud.git", branch = "main", features = ["nota-text"] }
signal-domain-criome = { git = "https://github.com/LiGoldragon/signal-domain-criome.git", branch = "main" }
signal-frame        = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
serde             = { version = "1", features = ["derive"], optional = true }
serde_json        = { version = "1", optional = true }
thiserror         = "2"
tokio             = { version = "1.52", features = ["io-util", "rt-multi-thread", "time"] }
triad-runtime     = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
ureq              = { version = "2", features = ["json"], optional = true }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

# Dev-loop aid: the Hetzner Phase 1 wire vocabulary lives on the
# `hetzner-compute` branch of signal-cloud, but the pushed
# meta-signal-cloud@hetzner-compute still references signal-cloud via
# `branch = "main"`. The shared `links = "signal-cloud"` marker forbids two
# signal-cloud sources in one graph, so redirect every signal-cloud reference
# (cloud's and meta-signal-cloud's) to the single hetzner-compute worktree.
# INTEGRATION MUST REPLACE THIS with branch pins once signal-cloud and
# meta-signal-cloud land on main and meta-signal-cloud repins signal-cloud.
[patch."https://github.com/LiGoldragon/signal-cloud.git"]
signal-cloud = { path = "/home/li/wt/github.com/LiGoldragon/signal-cloud/hetzner-compute" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = { level = "warn", priority = -1 }
